--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -3,6 +3,7 @@ black==21.10b0
 click==8.0.3
 Django==3.2.9
 django-cors-headers==3.10.0
+gunicorn==20.1.0
 mypy-extensions==0.4.3
 pathspec==0.9.0
 platformdirs==2.4.0
