--- a/jdv.conf
+++ b/jdv.conf
@@ -2,18 +2,14 @@ server {
 
     server_name jackdevries.com;
 
-    # rewrite ^(/.*)\.html(\?.*)?$ $1$2 permanent;
-    # rewrite ^/(.*)/$ /$1 permanent;
-    # rewrite ^/index$ / permanent;
-
-    root /home/jack/my_site/public;
+    root /home/jack/jackdevries.com/src;
 
     index index.html;
 
 
     listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/jackdevries.com/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/jackdevries.com/privkey.pem; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/jackdevries.com-0001/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/jackdevries.com-0001/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 
@@ -26,6 +22,7 @@ server {
 
 
     server_name jackdevries.com;
+
 
     listen 80;
     return 404; # managed by Certbot
