--- a/api/jdv_api.conf
+++ b/api/jdv_api.conf
@@ -20,6 +20,25 @@ server {
         proxy_pass http://unix:/home/jack/jackdevries.com/api/gunicorn.sock;
     }
 
+
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/api.jackdevries.com/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/api.jackdevries.com/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+
+}
+server {
+    if ($host = api.jackdevries.com) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+
+    server_name api.jackdevries.com;
+
     listen 80;
+    return 404; # managed by Certbot
+
 
 }
