--- a/jdv.conf
+++ b/jdv.conf
@@ -2,6 +2,16 @@ server {
 
     server_name jackdevries.com;
 
+    expires 30d;
+    gzip on;
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_http_version 1.1;
+    gzip_comp_level 5;
+    gzip_min_length 256;
+    gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript application/javascript;
+
+
     root /home/jack/jackdevries.com/src;
 
     index index.html;
