--- a/remix/package.json
+++ b/remix/package.json
@@ -12,6 +12,7 @@
     "start": "remix-serve build"
   },
   "dependencies": {
+    "@prisma/client": "^3.9.1",
     "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.3",
     "@tailwindcss/forms": "^0.4.0",
@@ -31,6 +32,7 @@
     "@remix-run/dev": "^1.1.3",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
+    "prisma": "^3.9.1",
     "typescript": "^4.1.2"
   },
   "engines": {
