--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "description": "",
   "license": "",
   "scripts": {
-    "dev": "sh setup_env.sh && PORT=8000 yarn prisma:migrate && yarn serve:dev",
+    "dev": "PORT=8000 yarn prisma:migrate && yarn serve:dev",
     "production": "sh setup_env.sh && yarn prisma:deploy && yarn serve:prod",
     "build:all": "yarn build:tailwind && remix build",
     "build:tailwind": "npx tailwindcss -i styles/tailwind.css -o app/tailwind.css",
     "serve:dev": "concurrently \"PORT=8000 remix dev\" \"yarn build:tailwind --watch\"",
     "serve:prod": "remix-serve build",
-    "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:deploy": "prisma migrate deploy",
     "postinstall": "remix setup node"
   },
   "dependencies": {
+    "prisma": "^3.9.1",
     "@prisma/client": "^3.9.1",
     "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.3",
@@ -36,7 +36,6 @@
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
     "concurrently": "^7.0.0",
-    "prisma": "^3.9.1",
     "tailwindcss": "^3.0.17",
     "typescript": "^4.1.2"
   },
