--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-
-
 services:
   web:
     build: .
@@ -10,6 +8,9 @@ services:
       - "8002:8002"
         # prisma studio, which can be run with `docker exec` when needed
       - "5555:5555"
+    entrypoint:
+      - sh
+      - scripts/entrypoint_dev.sh
     volumes:
       - ./app:/app/app
       - ./styles:/app/styles
