--- a/package.json
+++ b/package.json
@@ -4,18 +4,16 @@
   "description": "",
   "license": "",
   "scripts": {
-    "dev": "PORT=8000 yarn prisma:migrate && yarn serve:dev",
     "build:all": "yarn build:tailwind && remix build",
     "build:tailwind": "npx tailwindcss -i styles/tailwind.css -o app/tailwind.css",
-    "serve:dev": "concurrently \"PORT=8000 remix dev\" \"yarn build:tailwind --watch\"",
-    "serve:production": "PORT=8000 remix-serve build",
+    "dev": "concurrently \"PORT=8000 remix dev\" \"yarn build:tailwind --watch\"",
+    "production": "PORT=8000 remix-serve build",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:deploy": "prisma migrate deploy",
     "postinstall": "remix setup node"
   },
   "dependencies": {
-    "prisma": "^3.9.1",
     "@prisma/client": "^3.9.1",
     "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.3",
@@ -23,6 +21,7 @@
     "dotenv-expand": "^8.0.1",
     "fuse.js": "^3.6.1",
     "googleapis": "^85.0.0",
+    "prisma": "^3.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.1.3",
