--- a/package.json
+++ b/package.json
@@ -4,23 +4,22 @@
   "description": "",
   "license": "",
   "scripts": {
-    "build:all": "yarn build:tailwind && remix build",
+    "dev": "yarn prisma:deploy && concurrently \"PORT=8000 remix dev\" \"yarn build:tailwind --watch\"",
+    "production": "yarn prisma:deploy && PORT=8000 remix-serve build",
+    "build:all": "yarn build:tailwind && remix build && yarn prisma:generate",
     "build:tailwind": "npx tailwindcss -i styles/tailwind.css -o app/tailwind.css",
-    "dev": "concurrently \"PORT=8000 remix dev\" \"yarn build:tailwind --watch\"",
-    "production": "PORT=8000 remix-serve build",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:deploy": "prisma migrate deploy",
     "postinstall": "remix setup node"
   },
   "dependencies": {
+    "@mdx-js/mdx": "^2.1.1",
     "@prisma/client": "^3.9.1",
     "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.3",
-    "dotenv": "^8.6.0",
-    "dotenv-expand": "^8.0.1",
+    "@types/mdx": "^2.0.1",
     "fuse.js": "^3.6.1",
-    "googleapis": "^85.0.0",
     "prisma": "^3.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
