--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:deploy": "prisma migrate deploy",
-    "postinstall": "remix setup node"
+    "postinstall": "remix setup node",
+    "typecheck": "tsc -b"
   },
   "dependencies": {
     "@mdx-js/mdx": "^2.1.1",
@@ -20,6 +21,7 @@
     "@remix-run/serve": "^1.1.3",
     "@types/mdx": "^2.0.1",
     "fuse.js": "^3.6.1",
+    "intl-parse-accept-language": "^1.0.0",
     "prisma": "^3.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
