--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,8 @@ services:
       - yarn
       - dev
     volumes:
-      - ./schema.prisma:/app/schema.prisma
-      - ./app:/app/app
-      - ./styles:/app/styles
-      - ./public:/app/public
+      - .:/app
+      - node_modules:/app/node_modules
     links:
       - db
     environment:
@@ -28,3 +26,6 @@ services:
       POSTGRES_USER: app
       POSTGRES_PASSWORD: app
       POSTGRES_DB: app
+
+volumes:
+  node_modules:
