--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
     "prisma:deploy": "prisma migrate deploy",
+    "prisma:studio": "prisma studio",
     "postinstall": "remix setup node",
     "typecheck": "tsc -b"
   },
@@ -19,9 +20,10 @@
     "@prisma/client": "^3.9.1",
     "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.3",
+    "@types/accept-language-parser": "^1.5.3",
     "@types/mdx": "^2.0.1",
+    "accept-language-parser": "^1.5.0",
     "fuse.js": "^3.6.1",
-    "intl-parse-accept-language": "^1.0.0",
     "prisma": "^3.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
