--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -2,32 +2,31 @@ name: CI/CD
 
 on:
   push:
-    branches: ['main']
+    branches: ["main"]
 
 jobs:
   deploy:
-
     name: deploy code
     runs-on: ubuntu-latest
     environment: Kubernetes
     steps:
-    - uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
-    - name: login to docker hub
-      uses: docker/login-action@v1
-      with:
-        username: jdevries3133
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: login to docker hub
+        uses: docker/login-action@v1
+        with:
+          username: jdevries3133
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: setup kubectl
-      run: |
-        mkdir ~/.kube
-        echo "${{ secrets.KUBE_CONFIG }}" > ~/.kube/config
+      - name: setup kubectl
+        run: |
+          mkdir ~/.kube
+          echo "${{ secrets.KUBE_CONFIG }}" > ~/.kube/config
 
-    - name: run `make all` to push container and deploy via terraform
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: make
+      - name: run `make all` to push container and deploy via terraform
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: make
