--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -5,14 +5,24 @@ on:
     branches: ["main"]
 
 jobs:
-  deploy:
-    name: deploy code
+  main:
+    name: CI/CD pipeline
     runs-on: ubuntu-latest
     environment: Kubernetes
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
+      - name: make setup
+        env:
+          # credentials are used for terraform state bucket
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: make setup
+
+      - name: tests and typechecking
+        run: make check
 
       - name: login to docker hub
         uses: docker/login-action@v1
@@ -25,8 +35,12 @@ jobs:
           mkdir ~/.kube
           echo "${{ secrets.KUBE_CONFIG }}" > ~/.kube/config
 
-      - name: run `make all` to push container and deploy via terraform
+      - name: push container
+        run: make push
+
+      - name: deploy via terraform
         env:
+          # credentials are used for terraform state bucket
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        run: make
+        run: make deploy
