--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@vitejs/plugin-react": "^1.3.2",
     "accept-language-parser": "^1.5.0",
     "fuse.js": "^3.6.1",
+    "npm-run-all": "^4.1.5",
     "prisma": "^3.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
