--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "license": "",
   "scripts": {
+    "cypress": "cypress run",
+    "cypress:dev": "cypress open",
     "dev": "yarn prisma:deploy && concurrently \"PORT=8000 remix dev\" \"yarn build:tailwind --watch\"",
     "production": "yarn prisma:deploy && PORT=8000 remix-serve build",
     "build:all": "yarn build:tailwind && remix build && yarn prisma:generate",
@@ -27,6 +29,7 @@
     "@types/mdx": "^2.0.1",
     "@vitejs/plugin-react": "^1.3.2",
     "accept-language-parser": "^1.5.0",
+    "cypress": "^9.7.0",
     "fuse.js": "^3.6.1",
     "npm-run-all": "^4.1.5",
     "prisma": "^3.9.1",
