--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "prisma": "^3.9.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "rehype-highlight": "^5.0.2",
     "remix": "^1.1.3",
     "remix-auth": "^3.2.1",
     "remix-auth-google": "^1.1.0",
