--- a/package.json
+++ b/package.json
@@ -21,17 +21,12 @@
   },
   "dependencies": {
     "@mdx-js/mdx": "^2.1.1",
-    "@mdx-js/rollup": "^2.1.1",
     "@prisma/client": "^3.9.1",
+    "@remix-run/dev": "^1.1.3",
     "@remix-run/react": "^1.1.3",
     "@remix-run/serve": "^1.1.3",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@types/accept-language-parser": "^1.5.3",
-    "@types/mdx": "^2.0.1",
-    "@vitejs/plugin-react": "^1.3.2",
     "accept-language-parser": "^1.5.0",
-    "cypress": "^9.7.0",
-    "fuse.js": "^3.6.1",
+    "concurrently": "^7.0.0",
     "npm-run-all": "^4.1.5",
     "prisma": "^3.9.1",
     "react": "^17.0.2",
@@ -39,20 +34,24 @@
     "rehype-highlight": "^5.0.2",
     "remix": "^1.1.3",
     "remix-auth": "^3.2.1",
-    "remix-auth-google": "^1.1.0",
-    "vite-tsconfig-paths": "^3.4.1",
-    "vitest": "^0.12.9"
+    "remix-auth-google": "^1.1.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.1.3",
+    "@mdx-js/rollup": "^2.1.1",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
+    "@types/accept-language-parser": "^1.5.3",
+    "@types/mdx": "^2.0.1",
     "@types/react": "^17.0.24",
     "@types/react-dom": "^17.0.9",
-    "concurrently": "^7.0.0",
+    "@vitejs/plugin-react": "^1.3.2",
+    "cypress": "^9.7.0",
     "happy-dom": "^4.0.1",
     "tailwindcss": "^3.0.17",
-    "typescript": "^4.1.2"
+    "@testing-library/jest-dom": "^5.16.4",
+    "typescript": "^4.1.2",
+    "vite-tsconfig-paths": "^3.4.1",
+    "vitest": "^0.12.9"
   },
   "engines": {
     "node": ">=14"
