--- a/package.json
+++ b/package.json
@@ -32,9 +32,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rehype-highlight": "^5.0.2",
-    "remix": "^1.1.3",
-    "remix-auth": "^3.2.1",
-    "remix-auth-google": "^1.1.0"
+    "remix": "^1.1.3"
   },
   "devDependencies": {
     "@mdx-js/rollup": "^2.1.1",
