fix: various build system issues
* fixup development workflow after changing to multi-stage container
* add mdx files to tailwind content

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,13 +1,13 @@
 services:
   web:
+    build:
+      context: .
+      target: build
     ports:
       # web socket server that remix uses for development
       - "8002:8002"
         # prisma studio, which can be run with `docker exec` when needed
       - "5555:5555"
-    entrypoint:
-      - yarn
-      - dev
     volumes:
       - .:/app
       - node_modules:/app/node_modules
