upgrade remix to 1.61, fix associated breakage

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,30 @@
 {
   "files": [],
-  "references": [{ "path": "./app" }, { "path": "./cypress" }]
+  "references": [
+    {
+      "path": "./app"
+    },
+    {
+      "path": "./cypress"
+    }
+  ],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "allowJs": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "target": "ES2019",
+    "esModuleInterop": true,
+    "isolatedModules": true,
+    "jsx": "react-jsx",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
+    "lib": ["DOM", "DOM.Iterable", "ES2019"],
+    "noEmit": true,
+    "paths": {
+      "~/*": ["app/*"]
+    }
+  },
+  "include": ["remix.env.d.ts", "**/*.ts", "**/*.tsx"],
+  "noEmit": true
 }
