--- a/package.json
+++ b/package.json
@@ -17,14 +17,16 @@
     "prisma:studio": "prisma studio",
     "postinstall": "remix setup node",
     "test": "vitest",
-    "typecheck": "tsc -b"
+    "": "TODO: I don't know why `tsc -b` alone doesn't work anymore",
+    "typecheck": "tsc -b app && tsc -b cypress"
   },
   "dependencies": {
     "@mdx-js/mdx": "^2.1.1",
     "@prisma/client": "^3.9.1",
-    "@remix-run/dev": "^1.1.3",
-    "@remix-run/react": "^1.1.3",
-    "@remix-run/serve": "^1.1.3",
+    "@remix-run/dev": "^1.6.1",
+    "@remix-run/node": "^1.6.1",
+    "@remix-run/react": "^1.6.1",
+    "@remix-run/serve": "^1.6.1",
     "accept-language-parser": "^1.5.0",
     "concurrently": "^7.0.0",
     "npm-run-all": "^4.1.5",
@@ -32,12 +34,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rehype-highlight": "^5.0.2",
-    "remix": "^1.1.3"
+    "remix": "^1.6.1"
   },
   "devDependencies": {
     "@mdx-js/rollup": "^2.1.1",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
+    "@testing-library/jest-dom": "^5.16.4",
     "@types/accept-language-parser": "^1.5.3",
     "@types/mdx": "^2.0.1",
     "@types/react": "^17.0.24",
@@ -46,7 +49,6 @@
     "cypress": "^9.7.0",
     "happy-dom": "^4.0.1",
     "tailwindcss": "^3.0.17",
-    "@testing-library/jest-dom": "^5.16.4",
     "typescript": "^4.1.2",
     "vite-tsconfig-paths": "^3.4.1",
     "vitest": "^0.12.9"
