fix: bug in cypress tsconfig.json
* "noEmit" key was in the wrong place

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -3,8 +3,8 @@
     "composite": true,
     "target": "es5",
     "lib": ["es2015", "es5", "dom"],
-    "types": ["cypress"]
+    "types": ["cypress"],
+    "noEmit": true
   },
-  "include": ["**/*.ts"],
-  "noEmit": true
+  "include": ["**/*.ts"]
 }
