--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,6 +11,9 @@ services:
     volumes:
       - .:/app
       - node_modules:/app/node_modules
+    environment:
+      NODE_ENV: development
+
 
 volumes:
   node_modules:
