chore: remove lingering noEmit from top-level tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,5 @@
       "~/*": ["app/*"]
     }
   },
-  "include": ["remix.env.d.ts", "**/*.ts", "**/*.tsx"],
-  "noEmit": true
+  "include": ["remix.env.d.ts", "**/*.ts", "**/*.tsx"]
 }
