add debug config, fixup typescript configs

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,11 +10,8 @@
       "type": "node",
       "sourceMaps": true,
       "outFiles": [
-        "${workspaceFolder}/build/**/*.js",
-        "${workspaceFolder}/public/build/**/*.js"
-      ],
-      "resolveSourceMapLocations": [
-        "${workspaceFolder}/**",
+        "${workspaceFolder}/build/*.js",
+        "${workspaceFolder}/pubilc/build/*.js",
         "!**/node_modules/**"
       ]
     }
