admin page feature
* see all comments, delete comments
* see all contact inquiries, delete inquiries

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -3,6 +3,8 @@
     "composite": true,
     "lib": ["es2015", "es5", "dom"],
     "noEmit": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "target": "es5",
     "types": ["cypress"]
   },
