--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "postinstall": "remix setup node",
     "test": "vitest",
     "": "TODO: I don't know why `tsc -b` alone doesn't work anymore",
-    "typecheck": "tsc -b app && tsc -b cypress"
+    "typecheck": "tsc -b app && tsc -b cypress",
+    "prettiercheck": "prettier --check app cypress",
+    "format": "prettier --write app cypress"
   },
   "dependencies": {
     "@mdx-js/mdx": "^2.1.1",
@@ -48,6 +50,7 @@
     "@vitejs/plugin-react": "^1.3.2",
     "cypress": "^9.7.0",
     "happy-dom": "^4.0.1",
+    "prettier": "^2.7.1",
     "tailwindcss": "^3.0.17",
     "typescript": "^4.1.2",
     "vite-tsconfig-paths": "^3.4.1",
