--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -2,11 +2,24 @@ name: CI/CD
 
 on:
   push:
+  pull_request:
 
 jobs:
-  main:
-    name: CI/CD pipeline
+
+  ci:
+    name: continuous integration checks
     runs-on: ubuntu-latest
+    environment: Kubernetes
+    steps:
+      - uses: actions/checkout@v2
+      - name: make check
+        run: make check
+
+  cd:
+    name: continuous delivery
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    needs: ci
     environment: Kubernetes
     steps:
       - uses: actions/checkout@v2
@@ -19,9 +32,6 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: make setup
-
-      - name: make check
-        run: make check
 
       - name: login to docker hub
         uses: docker/login-action@v1
