--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -15,11 +15,10 @@ jobs:
       - name: make check
         run: make check
 
-  cd:
-    name: continuous delivery
+  push_container:
+    name: build and push Docker container
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    needs: ci
     environment: Kubernetes
     steps:
       - uses: actions/checkout@v2
@@ -39,15 +38,33 @@ jobs:
           username: jdevries3133
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: push container to Docker Hub
+        run: make push
+
+  deploy:
+    name: deploy to Kubernetes with Terraform
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    needs: [ci, push_container]
+    environment: Kubernetes
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
+      - name: make setup
+        env:
+          # credentials are used for terraform state bucket
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: make setup
+
       - name: setup kubectl
         run: |
           mkdir ~/.kube
           echo "${{ secrets.KUBE_CONFIG }}" > ~/.kube/config
 
-      - name: push container to Docker Hub
-        run: make push
-
-      - name: deploy to Kubernetes with terraform
+      - name: perform deployment
         env:
           # credentials are used for terraform state bucket
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
