--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -18,7 +18,7 @@ jobs:
 
   push_container:
     name: build and push Docker container
-    if: github.ref == 'refs/heads/main'
+    if: ${{ github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
     environment: Kubernetes
     steps:
@@ -37,7 +37,7 @@ jobs:
 
   deploy:
     name: deploy to Kubernetes with Terraform
-    if: github.ref == 'refs/heads/main'
+    if: ${{ github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
     needs: [ci, push_container]
     environment: Kubernetes
