--- a/package.json
+++ b/package.json
@@ -27,20 +27,20 @@
     "@heroicons/react": "^1.0.6",
     "@mdx-js/rollup": "^2.1.2",
     "@prisma/client": "^3.9.1",
-    "@remix-run/dev": "^1.6.1",
-    "@remix-run/node": "^1.6.1",
-    "@remix-run/react": "^1.6.1",
-    "@remix-run/serve": "^1.6.1",
+    "@remix-run/dev": "^1.7.2",
+    "@remix-run/node": "^1.7.2",
+    "@remix-run/react": "^1.7.2",
+    "@remix-run/serve": "^1.7.2",
     "accept-language-parser": "^1.5.0",
     "concurrently": "^7.0.0",
     "fuse.js": "^6.6.2",
     "prisma": "^3.9.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "18",
+    "react-dom": "18",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-slug": "^5.0.1",
     "rehype-toc": "^3.0.2",
-    "remix": "^1.6.1",
+    "remix": "^1.7.2",
     "retry-cli": "^0.7.0"
   },
   "devDependencies": {
@@ -49,7 +49,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@types/accept-language-parser": "^1.5.3",
     "@types/mdx": "^2.0.1",
-    "@types/react": "^17.0.24",
+    "@types/react": "18",
     "@types/react-dom": "^17.0.9",
     "@vitejs/plugin-react": "^1.3.2",
     "cypress": "^9.7.0",
