--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -13,6 +13,16 @@ jobs:
     environment: Kubernetes
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: CI Cache
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: cache
+          key: cache
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
       - name: make check
         run: make check
 
@@ -25,7 +35,18 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-
+      - uses: actions/checkout@v2
+      - name: CI Cache
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: cache
+          key: cache
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        with:
+          cache-from: type=local,src=cache/docker
+          cache-to: type=local,src=cache/docker
       - name: login to docker hub
         uses: docker/login-action@v1
         with:
@@ -45,12 +66,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-
       - name: setup kubectl
         run: |
           mkdir ~/.kube
           echo "${{ secrets.KUBE_CONFIG }}" > ~/.kube/config
-
       - name: perform deployment
         env:
           # credentials are used for terraform state bucket
