--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -21,8 +21,7 @@ jobs:
         with:
           path: cache
           key: cache-${{ github.run_id }}
-          restore-keys:
-            - cache-
+          restore-keys: cache-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: make check
@@ -42,7 +41,8 @@ jobs:
         uses: actions/cache@v3
         with:
           path: cache
-          key: cache
+          key: cache-${{ github.run_id }}
+          restore-keys: cache-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
         with:
