--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -13,6 +13,17 @@ jobs:
     environment: Kubernetes
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+      - name: CI Cache
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: cache
+          key: cache-${{ github.run_id }}
+          restore-keys: cache-
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
       - name: make check
         run: make check
 
@@ -25,6 +36,18 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
+      - name: CI Cache
+        id: cache
+        uses: actions/cache@v3
+        with:
+          path: cache
+          key: cache-${{ github.run_id }}
+          restore-keys: cache-
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+        with:
+          cache-from: type=local,src=cache/docker
+          cache-to: type=local,src=cache/docker
       - name: login to docker hub
         uses: docker/login-action@v1
         with:
