--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -2,7 +2,7 @@ name: CI/CD
 
 on:
   push:
-    branch: ['main']
+    branches: ['main']
   pull_request:
 
 jobs:
@@ -26,42 +26,23 @@ jobs:
         uses: docker/setup-buildx-action@v2
       - name: make check
         run: make check
-
-  push_container:
-    name: build and push Docker container
-    if: ${{ github.ref == 'refs/heads/main' }}
-    runs-on: ubuntu-latest
-    environment: Kubernetes
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: CI Cache
-        id: cache
-        uses: actions/cache@v3
-        with:
-          path: cache
-          key: cache-${{ github.run_id }}
-          restore-keys: cache-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-        with:
-          cache-from: type=local,src=cache/docker
-          cache-to: type=local,src=cache/docker
+        # for workflows on the main branch, push the container to docker hub
+        # as well
       - name: login to docker hub
+        if: ${{ github.ref == 'refs/heads/main' }}
         uses: docker/login-action@v1
         with:
           username: jdevries3133
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-
       - name: push container to Docker Hub
+        if: ${{ github.ref == 'refs/heads/main' }}
         run: make push
 
   deploy:
     name: deploy to Kubernetes with Terraform
     if: ${{ github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
-    needs: [ci, push_container]
+    needs: [ci]
     environment: Kubernetes
     steps:
       - uses: actions/checkout@v2
