--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -13,21 +13,18 @@ jobs:
     environment: Kubernetes
     steps:
       - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: CI Cache
-        id: cache
-        uses: actions/cache@v3
-        with:
-          path: cache
-          key: cache-${{ github.run_id }}
-          restore-keys: cache-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
       - name: make check
         run: make check
-        # for workflows on the main branch, push the container to docker hub
-        # as well
+
+  push_container:
+    name: build and push Docker container
+    if: ${{ github.ref == 'refs/heads/main' }}
+    runs-on: ubuntu-latest
+    environment: Kubernetes
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: login to docker hub
         if: ${{ github.ref == 'refs/heads/main' }}
         uses: docker/login-action@v1
