--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -10,9 +10,12 @@ jobs:
   ci:
     name: continuous integration checks
     runs-on: ubuntu-latest
+    needs: [push_container]
     environment: Kubernetes
     steps:
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - name: make check
         run: make check
 
