--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "",
   "scripts": {
     "cypress": "cypress run",
-    "cypress:dev": "cypress open",
+    "cypress:dev": "cypress open --browser chrome --e2e",
     "dev": "yarn prisma:deploy && concurrently --names remix,tailwind \"PORT=8000 remix dev --sourcemap\" \"yarn build:tailwind --watch\"",
     "debug": "node --inspect-brk=0.0.0.0 ./node_modules/.bin/remix dev --sourcemap",
     "production": "yarn prisma:deploy && PORT=8000 remix-serve build",
@@ -50,7 +50,7 @@
     "@types/react": "18",
     "@types/react-dom": "^17.0.9",
     "@vitejs/plugin-react": "^1.3.2",
-    "cypress": "^9.7.0",
+    "cypress": "10",
     "happy-dom": "^4.0.1",
     "prettier": "^2.7.1",
     "tailwindcss": "^3.0.17",
