make native arm container work

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "cypress": "cypress run",
     "cypress:dev": "cypress open --browser chrome --e2e",
-    "dev": "yarn prisma:deploy && concurrently --names remix,tailwind \"PORT=8000 remix dev --sourcemap\" \"yarn build:tailwind --watch\"",
+    "dev": "yarn prisma:deploy && yarn build:tailwind && concurrently --names remix,tailwind \"PORT=8000 remix dev --sourcemap\" \"yarn build:tailwind --watch\"",
     "debug": "node --inspect-brk=0.0.0.0 ./node_modules/.bin/remix dev --sourcemap",
     "production": "yarn prisma:deploy && PORT=8000 remix-serve build",
     "build:all": "yarn build:tailwind && yarn prisma:generate && remix build",
