--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "@types/accept-language-parser": "^1.5.3",
     "@types/mdx": "^2.0.1",
     "@types/react": "18",
-    "@types/react-dom": "^17.0.9",
+    "@types/react-dom": "18",
     "@vitejs/plugin-react": "^1.3.2",
     "cypress": "10",
     "happy-dom": "^4.0.1",
