--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "@remix-run/node": "^1.7.2",
     "@remix-run/react": "^1.7.2",
     "@remix-run/serve": "^1.7.2",
+    "@types/nodemailer": "^6.4.6",
     "accept-language-parser": "^1.5.0",
     "concurrently": "^7.0.0",
     "fuse.js": "^6.6.2",
+    "nodemailer": "^6.8.0",
     "prisma": "^3.9.1",
     "react": "^18",
     "react-dom": "^18",
